<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/demo_team_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/row_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/row_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/row_formed_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_name">

        <ImageView
            android:id="@+id/team_badge"
            android:layout_width="169dp"
            android:layout_height="183dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/demo_team_badge" />

        <ImageView
            android:id="@+id/team_jersey"
            android:layout_width="162dp"
            android:layout_height="183dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/demo_team_jersey" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/row_formed_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/upcoming_event_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_images">

        <TextView
            android:id="@+id/since_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/since_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/formed_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_formed_year"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcoming_event_list"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/team_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_formed_year" />

    <TextView
        android:id="@+id/team_description"
        android:layout_width="404dp"
        android:layout_height="246dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical"
        android:text="@string/demo_team_description"
        app:layout_constraintBottom_toTopOf="@+id/row_youtube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcoming_event_list" />

    <LinearLayout
        android:id="@+id/row_youtube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_description">

        <ImageView
            android:id="@+id/youtube_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_youtube" />

        <TextView
            android:id="@+id/youtube_link"
            android:layout_width="317dp"
            android:layout_height="23dp"
            android:autoLink="web"
            android:text="@string/demo_youtube_link" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/team_details_group"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="row_images,row_formed_year,upcoming_event_list,row_youtube,team_name,team_description" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/team_empty_state"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/player_waiting"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>